# packages/types/src/api/user-vocabulary/get.ts
@@ -1,4 +1,6 @@
 import { paths } from "../../api";
 
-export type GetUserVocabularyResponse = paths["/user-vocabulary"]["get"]["responses"]["200"]["content"]["application/json"];
-export type GetUserVocabularyRequest = paths["/user-vocabulary"]["get"]["parameters"]["query"];
+export type GetUserVocabularyResponse =
+	paths["/user-vocabulary"]["get"]["responses"]["200"]["content"]["application/json"];
+export type GetUserVocabularyRequest =
+	paths["/user-vocabulary"]["get"]["parameters"]["query"];
