# packages/types/src/api/user-vocabulary/post.ts
@@ -1,3 +1,4 @@
 import { paths } from "../../api";
 
-export type PostUserVocabularyResponse = paths["/user-vocabulary"]["post"]["responses"]["201"]["content"]["application/json"];
+export type PostUserVocabularyResponse =
+	paths["/user-vocabulary"]["post"]["responses"]["201"]["content"]["application/json"];
